--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ http-body-util = "0.1.3"
 hyper = { version = "1.8.1", features = ["full"] }
 hyper-util = { version = "0.1.19", features = ["full"] }
 pin-project = "1.1.10"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 tokio = { version = "1.49.0", features = ["full"] }
 tower = { version = "0.5.3", features = ["full"] }
 tracing = "0.1.44"
