refactor(core): rename pipeline to circuit and step to module
Rename core abstractions to align with circuit/schematic terminology:
- Pipeline → Circuit
- Step → Module
- Context → Bus

Update all implementations including macros, HTTP integration, and standard
library modules to use the new terminology. Simplify error handling by
removing custom result types in favor of `anyhow::Result`. Remove
Tower-based middleware implementations in favor of direct Module trait
implementations.

BREAKING CHANGE: Core API types have been renamed. Users must update from
Pipeline/Step/Context to Circuit/Module/Bus and remove Tower-based
middleware patterns.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ members = [
     "macros",
     "examples/basic-schematic",
     "examples/hello-world",
-    "examples/pipeline-demo",
     "examples/routing-demo",
 ]
 
@@ -38,3 +37,4 @@ uuid = { version = "1.6", features = ["v4", "serde"] }
 quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
 proc-macro2 = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
