--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ members = [
     # "runtime",
     # "http",
     # "macros",
-    "examples/basic-schematic",
-    "examples/hello-world",
-    "examples/routing-demo",
-    "examples/state-tree-demo",
+    "examples/basic-schematic", "examples/complex-schematic",
+    "examples/hello-world", "examples/otel-concept",
+    "examples/routing-demo", "examples/session-pattern",
+    "examples/state-tree-demo", "examples/websocket-loop",
 ]
 
 [workspace.dependencies]
