--- a/examples/state-tree-demo/Cargo.toml
+++ b/examples/state-tree-demo/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ranvier-core = { workspace = true }
-tokio = { workspace = true }
-http = { workspace = true }
-async-trait = { workspace = true }
-anyhow = { workspace = true }
+ranvier-core = { path = "../../core" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+uuid = { version = "1.0", features = ["v4"] }
