--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,7 +8,7 @@ uuid = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
-async-trait = { workspace = true }
+async-trait.workspace = true
 futures-core = { workspace = true }
 http = { workspace = true }
 chrono = { workspace = true, features = ["serde"] }
