--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "examples/hello-world", "examples/otel-concept",
     "examples/routing-demo", "examples/session-pattern",
     "examples/state-tree-demo", "examples/synapse-demo", "examples/websocket-loop",
-    "examples/order-processing-demo",
+    "examples/order-processing-demo", "examples/fullstack-demo",
 ]
 
 [workspace.dependencies]
