feat(synapse): Implement Synapse Codegen and integrate with CLI

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 
 [dependencies]
 ranvier-core = { path = "../core" }
+ranvier-synapse = { path = "../crates/synapse" }
 clap = { version = "4", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
