feat: implement Public Status Page (Phase 2 P0)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,14 @@ members = [
     "examples/db-example",
     "crates/synapse",
     "crates/db",
+    "crates/status",
 ]
 
 [workspace.dependencies]
 # Internal Crates
 ranvier-core = { path = "core", version = "0.1.0" }
 ranvier-db = { path = "crates/db", version = "0.1.0" }
+ranvier-status = { path = "crates/status", version = "0.1.0" }
 
 
 # Sync Third-party Dependencies
