feat(core): add replay capability and observability instrumentation
Introduce replay functionality and distributed tracing instrumentation for
improved observability and debugging of circuit execution flows.

- Add replay and timeline modules to core for execution tracking
- Instrument axon execution with tracing spans for Ingress, Node, and Circuit
- Create ranvier-observe crate for telemetry and monitoring
- Add otel-demo and replay-demo examples for feature demonstration
- Integrate tracing crate into core for structured logging

This enables developers to trace execution flows through the circuit and
replay executions for debugging and analysis purposes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,12 @@ members = [
     "examples/order-processing-demo", "examples/fullstack-demo",
     "examples/static-build-demo",
     "examples/db-example",
+    "examples/otel-demo",
+    "examples/replay-demo",
     "crates/synapse",
     "crates/db",
     "crates/status",
+    "crates/observe",
 ]
 
 [workspace.dependencies]
@@ -20,6 +23,7 @@ members = [
 ranvier-core = { path = "core", version = "0.1.0" }
 ranvier-db = { path = "crates/db", version = "0.1.0" }
 ranvier-status = { path = "crates/status", version = "0.1.0" }
+ranvier-observe = { path = "crates/observe", version = "0.1.0" }
 
 
 # Sync Third-party Dependencies
