--- a/examples/routing-demo/Cargo.toml
+++ b/examples/routing-demo/Cargo.toml
@@ -10,3 +10,4 @@ http = { workspace = true }
 async-trait = { workspace = true }
 anyhow = { workspace = true }
 serde_json = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
