--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,12 @@ members = [
     "examples/db-example",
     "examples/otel-demo",
     "examples/replay-demo",
+    "examples/std-lib-demo",
     "crates/synapse",
     "crates/db",
     "crates/status",
     "crates/observe",
+    "crates/std",
 ]
 
 [workspace.dependencies]
@@ -24,6 +26,7 @@ ranvier-core = { path = "core", version = "0.1.0" }
 ranvier-db = { path = "crates/db", version = "0.1.0" }
 ranvier-status = { path = "crates/status", version = "0.1.0" }
 ranvier-observe = { path = "crates/observe", version = "0.1.0" }
+ranvier-std = { path = "crates/std", version = "0.1.0" }
 
 
 # Sync Third-party Dependencies
