--- a/crates/std/Cargo.toml
+++ b/crates/std/Cargo.toml
@@ -13,6 +13,8 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 schemars = "1.2.0"
 rand = "0.8"
+num-traits = "0.2"
+anyhow = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
