refactor(core): overhaul foundation to Hyper/Tower
- Refactor Axon to reusable Pipeline<In, Out>.

- Implement RanvierService as tower::Service.

- Migrate std-lib-demo to Hyper 1.0.

- Update ranvier-core and ranvier-std dependencies and exports.

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,3 +14,8 @@ chrono = { workspace = true, features = ["serde"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 anyhow = { workspace = true }
 tracing = "0.1"
+hyper = { workspace = true }
+tower = { workspace = true }
+http = { workspace = true }
+http-body-util = { workspace = true }
+bytes = { workspace = true }
