--- a/examples/std-lib-demo/Cargo.toml
+++ b/examples/std-lib-demo/Cargo.toml
@@ -11,3 +11,9 @@ tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = "0.3"
 anyhow = { workspace = true }
+hyper = { workspace = true }
+tower = { workspace = true }
+http-body-util = { workspace = true }
+hyper-util = { workspace = true }
+bytes = { workspace = true }
+http = { workspace = true }
