refactor(overhaul): Flat API & Ingress - Implement Ranvier::http() and split core [Discussion 190-195]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,18 @@ resolver = "2"
 members = [
     "core",
     "cli",
-    "examples/basic-schematic", "examples/complex-schematic",
-    "examples/hello-world", "examples/otel-concept",
-    "examples/routing-demo", "examples/session-pattern",
-    "examples/state-tree-demo", "examples/synapse-demo", "examples/websocket-loop",
-    "examples/order-processing-demo", "examples/fullstack-demo",
+    "crates/http",
+    "examples/basic-schematic",
+    "examples/complex-schematic",
+    "examples/hello-world",
+    "examples/otel-concept",
+    "examples/routing-demo",
+    "examples/session-pattern",
+    "examples/state-tree-demo",
+    "examples/synapse-demo",
+    "examples/websocket-loop",
+    "examples/order-processing-demo",
+    "examples/fullstack-demo",
     "examples/static-build-demo",
     "examples/db-example",
     "examples/otel-demo",
@@ -23,6 +30,7 @@ members = [
 [workspace.dependencies]
 # Internal Crates
 ranvier-core = { path = "core", version = "0.1.0" }
+ranvier-http = { path = "crates/http", version = "0.1.0" }
 ranvier-db = { path = "crates/db", version = "0.1.0" }
 ranvier-status = { path = "crates/status", version = "0.1.0" }
 ranvier-observe = { path = "crates/observe", version = "0.1.0" }
@@ -51,4 +59,12 @@ quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
 proc-macro2 = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono", "uuid", "json"] }
+sqlx = { version = "0.8", features = [
+    "runtime-tokio",
+    "postgres",
+    "mysql",
+    "sqlite",
+    "chrono",
+    "uuid",
+    "json",
+] }
