refactor(examples): update Axon API calls to match new signature
Update all example files to use the refactored Axon API where input is
now passed to execute() instead of start(), and explicit type
parameters are required for Axon construction.

--- a/examples/std-lib-demo/Cargo.toml
+++ b/examples/std-lib-demo/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 ranvier-core = { workspace = true }
 ranvier-std = { workspace = true }
+ranvier-http = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = "0.3"
