--- a/examples/hello-world/Cargo.toml
+++ b/examples/hello-world/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 ranvier-core = { workspace = true }
+ranvier-runtime = { workspace = true }
 ranvier-http = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
