--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -7,6 +7,7 @@ description = "HTTP Ingress adapter for Ranvier - Tower-native Service implement
 [dependencies]
 # Internal
 ranvier-core = { workspace = true }
+ranvier-runtime = { workspace = true }
 
 # Async
 tokio = { workspace = true }
