--- a/std/Cargo.toml
+++ b/std/Cargo.toml
@@ -18,3 +18,4 @@ anyhow = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
+ranvier-runtime = { workspace = true }
