--- a/examples/complex-schematic/Cargo.toml
+++ b/examples/complex-schematic/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 ranvier-core = { path = "../../core" }
+ranvier-runtime = { path = "../../runtime" }
 tokio = { version = "1.43.0", features = ["full"] }
 async-trait = "0.1"
 anyhow = "1.0"
