--- a/examples/otel-demo/Cargo.toml
+++ b/examples/otel-demo/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 ranvier-core = { path = "../../core" }
+ranvier-runtime = { path = "../../runtime" }
 ranvier-observe = { path = "../../crates/observe" }
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
