--- a/examples/replay-demo/Cargo.toml
+++ b/examples/replay-demo/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 ranvier-core = { path = "../../core" }
+ranvier-runtime = { path = "../../runtime" }
 anyhow = "1.0"
 tokio = { version = "1", features = ["full"] }
