--- a/examples/typed-state-tree/Cargo.toml
+++ b/examples/typed-state-tree/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
-name = "basic-schematic"
+name = "typed-state-tree"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 ranvier-core = { workspace = true }
 ranvier-runtime = { workspace = true }
 tokio = { workspace = true }
-http = { workspace = true }
 async-trait = { workspace = true }
 anyhow = { workspace = true }
-serde_json = { workspace = true }
+serde = { workspace = true }
