--- a/examples/websocket-loop/Cargo.toml
+++ b/examples/websocket-loop/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2024"
 
 [dependencies]
 ranvier-core = { path = "../../core" }
+ranvier-runtime = { path = "../../runtime" }
 tokio = { version = "1.43.0", features = ["full"] }
 async-trait = "0.1"
 anyhow = "1.0"
 futures = "0.3"
 http = "1.2"
-
