--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "ranvier-runtime"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+version.workspace = true
+edition.workspace = true
 description = "Async Execution Engine for Ranvier"
 
 [dependencies]
