feat(obs): implementation of resource-aware telemetry and enhanced schematic metadata (Phase 2)

--- a/http/Cargo.toml
+++ b/http/Cargo.toml
@@ -29,3 +29,4 @@ bytes = { workspace = true }
 # Utilities
 thiserror = { workspace = true }
 tracing = { workspace = true }
+uuid = { workspace = true }
