--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -12,7 +12,15 @@ async-trait = { workspace = true }
 tokio = { workspace = true }
 
 # Database
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono", "uuid", "json"] }
+sqlx = { version = "0.8", features = [
+    "runtime-tokio",
+    "postgres",
+    "mysql",
+    "sqlite",
+    "chrono",
+    "uuid",
+    "json",
+] }
 
 # Error handling
 anyhow = { workspace = true }
@@ -23,6 +31,7 @@ uuid = { workspace = true }
 chrono = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+tracing = { workspace = true }
 
 # Futures
 futures-core = { workspace = true }
