feat(inspector): implement ranvier-inspector crate and studio-demo (Phase 4)

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -10,6 +10,7 @@ description = "Async Execution Engine for Ranvier"
 
 [dependencies]
 ranvier-core = { path = "../core", version = "0.1.0" }
+ranvier-inspector = { workspace = true }
 async-trait = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true, features = ["sync", "time"] }
