--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,9 @@ members = [
     "crates/db",
     "crates/status",
     "crates/observe",
+    "crates/inspector",
     "examples/flat-api-demo",
+    "examples/studio-demo",
 ]
 
 [workspace.package]
@@ -50,6 +52,7 @@ ranvier-http = { path = "http", version = "0.1.0" }
 ranvier-db = { path = "crates/db", version = "0.1.0" }
 ranvier-status = { path = "crates/status", version = "0.1.0" }
 ranvier-observe = { path = "crates/observe", version = "0.1.0" }
+ranvier-inspector = { path = "crates/inspector", version = "0.1.0" }
 ranvier-std = { path = "std", version = "0.1.0" }
 ranvier-macros = { path = "macros", version = "0.1.0" }
 
@@ -71,6 +74,7 @@ thiserror = "1.0"
 tokio = { version = "1.49.0", features = ["full"] }
 tower = { version = "0.5.3", features = ["full"] }
 tracing = "0.1.44"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
 uuid = { version = "1.6", features = ["v4", "serde"] }
 quote = "1.0"
 syn = { version = "2.0", features = ["full"] }
