--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,11 +25,11 @@ members = [
     "examples/replay-demo",
     "examples/std-lib-demo",
     "examples/typed-state-tree",
-    "crates/synapse",
-    "crates/db",
-    "crates/status",
-    "crates/observe",
-    "crates/inspector",
+    "extensions/synapse",
+    "extensions/db",
+    "extensions/status",
+    "extensions/observe",
+    "extensions/inspector",
     "examples/flat-api-demo",
     "examples/studio-demo",
 ]
@@ -49,10 +49,10 @@ categories = ["asynchronous", "development-tools", "web-programming"]
 ranvier-core = { path = "core", version = "0.1.0" }
 ranvier-runtime = { path = "runtime", version = "0.1.0" }
 ranvier-http = { path = "http", version = "0.1.0" }
-ranvier-db = { path = "crates/db", version = "0.1.0" }
-ranvier-status = { path = "crates/status", version = "0.1.0" }
-ranvier-observe = { path = "crates/observe", version = "0.1.0" }
-ranvier-inspector = { path = "crates/inspector", version = "0.1.0" }
+ranvier-db = { path = "extensions/db", version = "0.1.0" }
+ranvier-status = { path = "extensions/status", version = "0.1.0" }
+ranvier-observe = { path = "extensions/observe", version = "0.1.0" }
+ranvier-inspector = { path = "extensions/inspector", version = "0.1.0" }
 ranvier-std = { path = "std", version = "0.1.0" }
 ranvier-macros = { path = "macros", version = "0.1.0" }
 
