--- a/examples/otel-demo/Cargo.toml
+++ b/examples/otel-demo/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 ranvier-core = { path = "../../core" }
 ranvier-runtime = { path = "../../runtime" }
-ranvier-observe = { path = "../../crates/observe" }
+ranvier-observe = { path = "../../extensions/observe" }
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
 anyhow = "1.0"
