--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { workspace = true, features = ["sync", "time"] }
 uuid = { workspace = true }
 futures-core = { workspace = true }
 futures-util = { workspace = true }
+serde_json = { workspace = true }
