--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "http",
     "std",
     "macros",
+    "kit",
     "examples/basic-schematic",
     "examples/complex-schematic",
     "examples/hello-world",
