--- a/extensions/status/Cargo.toml
+++ b/extensions/status/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "ranvier-status"
-version = "0.1.0"
-edition = "2021"
+authors.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+version.workspace = true
+edition.workspace = true
 description = "Static Status Page generator for Ranvier"
 
 [dependencies]
-ranvier-core = { path = "../../core" }
+ranvier-core = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 chrono = { workspace = true }
