--- a/examples/studio-demo/Cargo.toml
+++ b/examples/studio-demo/Cargo.toml
@@ -13,3 +13,5 @@ anyhow = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+serde_json = { workspace = true }
+chrono = { workspace = true }
