--- a/extensions/inspector/Cargo.toml
+++ b/extensions/inspector/Cargo.toml
@@ -18,3 +18,6 @@ tracing = { workspace = true }
 tower-http = { version = "0.5", features = ["cors", "trace"] }
 futures = "0.3"
 tracing-subscriber = { workspace = true, features = ["registry"] }
+
+[dev-dependencies]
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
