--- a/extensions/status/Cargo.toml
+++ b/extensions/status/Cargo.toml
@@ -4,7 +4,7 @@ authors.workspace = true
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
-version.workspace = true
+version = "0.1.1"
 edition.workspace = true
 description = "Static Status Page generator for Ranvier"
 
